      (John Arbash Meinel)

    * Support bzr:// and bzr+ssh:// urls to work with the new RPC-based
      transport which will be used with the upcoming high-performance smart
      server. The new command ``bzr serve`` will invoke bzr in server mode,
      which processes these requests. (Andrew Bennetts, Robert Collins, Martin
      Pool)

  BUG FIXES:

    * Raise WeaveFormatError rather than StopIteration when trying to read
      an empty Weave file. (John Arbash Meinel, #46871)

    * Don't access e.code for generic URLErrors, only HTTPErrors have .code.
      (Vincent Ladeuil, #59835)

    * Handle boundary="" lines properly to allow access through a Squid proxy.
      (John Arbash Meinel, #57723)

    * revert now removes newly-added directories (Aaron Bentley, #54172)

    * ``bzr upgrade sftp://`` shouldn't fail to upgrade v6 branches if there 
      isn't a working tree. (David Allouche, #40679)

    * Give nicer error messages when a user supplies an invalid --revision
      parameter. (John Arbash Meinel, #55420)

    * Handle when LANG is not recognized by python. Emit a warning, but
      just revert to using 'ascii'. (John Arbash Meinel, #35392)

    * Don't use preexec_fn on win32, as it is not supported by subprocess.
      (John Arbash Meinel)

    * Skip specific tests when the dependencies aren't met. This includes
      some ``setup.py`` tests when ``python-dev`` is not available, and
      some tests that depend on paramiko. (John Arbash Meinel, Mattheiu Moy)

    * Fallback to Paramiko properly, if no ``ssh`` executable exists on
      the system. (Andrew Bennetts, John Arbash Meinel)

    * ``Branch.bind(other_branch)`` no longer takes a write lock on the
      other branch, and will not push or pull between the two branches.
      API users will need to perform a push or pull or update operation if they
      require branch synchronisation to take place. (Robert Collins, #47344)
